--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,18 @@
     margin: 0;
     padding: 0;
 }
+
+.UI.visible{
+    position: fixed;
+    flex-direction: column;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.UI{
+    display: none;
+}
